fix(Editor): Fix UI jumping around when clicking into code editor

--- a/desktop/src/renderer/components/app-document/app-document-preview/app-document-preview.css
+++ b/desktop/src/renderer/components/app-document/app-document-preview/app-document-preview.css
@@ -1,13 +1,18 @@
-:host,
+app-document-preview,
 .app-document-preview {
   @apply flex-grow flex max-h-full overflow-hidden;
-}
 
-stencila-editor {
-  @apply w-full;
-  --border-width: 0;
+  stencila-editor {
+    @apply w-full h-full max-h-full;
+    --border-width: 0;
 
-  ::slotted(.editor-container:focus-within) {
-    box-shadow: none;
+    .cm-editor,
+    .cm-wrap {
+      @apply h-full max-h-full;
+    }
+
+    .editorContainer:focus-within {
+      box-shadow: none !important;
+    }
   }
 }
